--- a/package.json
+++ b/package.json
@@ -8,9 +8,12 @@
     "@testing-library/user-event": "^12.6.3",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
+    "react-localize-redux": "^3.5.3",
+    "react-redux": "^7.2.2",
     "react-scripts": "4.0.2",
-    "web-vitals": "^1.1.0",
-    "redux": "^4.0.5"
+    "redux": "^4.0.5",
+    "superagent": "^6.1.0",
+    "web-vitals": "^1.1.0"
   },
   "scripts": {
     "start": "react-scripts start",
